crates/rsonpath-lib/tests/snapshots/engine_serialization_snapshots__ron__slice.snap
---
source: crates/rsonpath-lib/tests/engine_serialization_snapshots.rs
expression: "&engine(\"$..entries[3:5:7]\")?"
snapshot_kind: text
---
(V1, Automaton(
  states: [
    StateTable(
      attributes: StateAttributes(2),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(0),
      member_transitions: [
        (StringPattern(JsonString(
          quoted: "\"entries\"",
        )), State(2)),
      ],
      array_transitions: [],
      fallback_state: State(1),
    ),
    StateTable(
      attributes: StateAttributes(56),
      member_transitions: [
        (StringPattern(JsonString(
          quoted: "\"entries\"",
        )), State(2)),
      ],
      array_transitions: [
        ArrayTransition(
          label: Index(JsonUInt(3)),
          target: State(3),
        ),
      ],
      fallback_state: State(1),
    ),
    StateTable(
      attributes: StateAttributes(1),
      member_transitions: [
        (StringPattern(JsonString(
          quoted: "\"entries\"",
        )), State(2)),
      ],
      array_transitions: [],
      fallback_state: State(1),
    ),
  ],
))
